--- a/.github/workflows/Synchronize.yml
+++ b/.github/workflows/Synchronize.yml
@@ -25,7 +25,7 @@ jobs:
         uses: repo-sync/github-sync@v2
         if: env.PAT
         with:
-          source_repo: "https://gitee.com/lxk0301/jd_scripts.git"
+          source_repo: "git@gitee.com:lxk0301/jd_scripts.git"
           source_branch: "master" # 克隆对方仓库的分支
           destination_branch: "master" #新建一个你自己远程的分支
           github_token: ${{ secrets.PAT }}
