--- a/.github/workflows/Synchronize.yml
+++ b/.github/workflows/Synchronize.yml
@@ -13,7 +13,8 @@ on:
 jobs:
   repo-sync:
     env:
-      PAT: ${{ secrets.PAT }} #此处PAT需要申请，教程详见：https://www.jianshu.com/p/bb82b3ad1d11
+      PAT: ${{ secrets.PAT }}
+      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
@@ -29,3 +30,4 @@ jobs:
           source_branch: "master" # 克隆对方仓库的分支
           destination_branch: "master" #新建一个你自己远程的分支
           github_token: ${{ secrets.PAT }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
