--- a/.github/workflows/Synchronize.yml
+++ b/.github/workflows/Synchronize.yml
@@ -14,7 +14,7 @@ jobs:
   repo-sync:
     env:
       PAT: ${{ secrets.PAT }}
-#       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
@@ -22,21 +22,21 @@ jobs:
         with:
           persist-credentials: false
           
-      - name: Synchronize
-        uses: wearerequired/git-mirror-action@v1
-#         if: env.PAT
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        with:
-          source-repo: 'git@gitee.com:lxk0301/jd_scripts.git'
-          destination-repo: 'git@github.com:YamTian/lxk0301.git'
-
 #       - name: Synchronize
-#         uses: repo-sync/github-sync@v2
+#         uses: wearerequired/git-mirror-action@v1
 #         if: env.PAT
-#         with:
-#           source_repo: "git@gitee.com:lxk0301/jd_scripts.git"
-#           source_branch: "master" # 克隆对方仓库的分支
-#           destination_branch: "master" #新建一个你自己远程的分支
-#           github_token: ${{ secrets.PAT }}
+#         env:
 #           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+#         with:
+#           source-repo: 'git@gitee.com:lxk0301/jd_scripts.git'
+#           destination-repo: 'git@github.com:YamTian/lxk0301.git'
+
+      - name: Synchronize
+        uses: repo-sync/github-sync@v2
+        if: env.PAT
+        with:
+          source_repo: "git@gitee.com:lxk0301/jd_scripts.git"
+          source_branch: "master" # 克隆对方仓库的分支
+          destination_branch: "master" #新建一个你自己远程的分支
+          github_token: ${{ secrets.PAT }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
