--- a/.github/workflows/Synchronize.yml
+++ b/.github/workflows/Synchronize.yml
@@ -23,19 +23,11 @@ jobs:
         with:
           persist-credentials: false
           
-      - name: Prepare
-        run: |
-          mkdir -p ~/.ssh
-          echo -e "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan gitee.com > ~/.ssh/known_hosts
-          
       - name: Synchronize
         uses: repo-sync/github-sync@v2
         if: env.PAT
         with:
           source_repo: "git@gitee.com:lxk0301/jd_scripts.git"
-          source_branch: "master" # 克隆对方仓库的分支
-          destination_branch: "master" #新建一个你自己远程的分支
+          source_branch: "master"
+          destination_branch: "master"
           github_token: ${{ secrets.PAT }}
-#           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
