--- a/.github/workflows/Synchronize.yml
+++ b/.github/workflows/Synchronize.yml
@@ -2,7 +2,7 @@
 name: Synchronize
 on:
   schedule:
-    - cron: '0 0-16,23 * * *'
+    - cron: '0 */4 * * *'
   workflow_dispatch:
   watch:
     types: started
