--- a/.github/workflows/Sync_To_Gitee.yml
+++ b/.github/workflows/Sync_To_Gitee.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: wearerequired/git-mirror-action@master
         env:
           SSH_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_KEY }}
+          GIT_DISCOVERY_ACROSS_FILESYSTEM: ${{ secrets.GIT_DISCOVERY_ACROSS_FILESYSTEM }}
         with:
           source-repo: "git@github.com:YamTian/jd_scripts.git"
           destination-repo: "git@gitee.com:chiupam/jd_scripts.git"
