--- a/Loon/lxk0301_LoonTask.conf
+++ b/Loon/lxk0301_LoonTask.conf
@@ -112,6 +112,9 @@ cron "10 0-21/3 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/mast
 # 跳跳乐瓜分京豆
 cron "1 0,11,21 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_jump.js, tag=跳跳乐瓜分京豆
 
+# jsjiami.com.v6
+cron "4 10 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_jxlhb.js,tag=京喜领88元红包
+
 # 京喜农场
 cron "0 9,12,18 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_jxnc.js,tag=京喜农场
 
@@ -201,9 +204,6 @@ cron "33 0,6-23/2 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/ma
 
 # 618动物联萌收集金币
 cron "0-59/30 * * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_zooCollect.js,tag=618动物联萌收集金币
-
-# 京喜签到
-cron "5 0 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jx_sign.js,tag=京喜签到
 
 # 小米运动
 cron "15 17 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/backUp/xmSports.js, tag=小米运动
